[package]
name = "pws"
version = "0.0.0"
authors = ["Lorenzo Fontoura <lorenzo@nioel.com>"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/rellfy/pws"
repository = "https://github.com/rellfy/pws"
description = "Persistent Websocket connection for tokio-tungstenite"
readme = "README.md"

[features]
default = ["pong"]
pong = []

[dependencies]
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
log = "0.4"
url = "2.4"
thiserror = "1"
